Add fetching, deleting and storing one beer